# Deployment_model_inference

./: Dockerfile  README.md  pyproject.toml
src/: data_preprocessor.py  inference.py
test/: test_inference.py
tests/: test_inference.py
